--- a/metal_defect_detection.ipynb
+++ b/metal_defect_detection.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Детекция дефектов металлических пластин\n",
+    "Данный notebook является примером решения задачи [Severstal: Steel Defect Detection](https://www.kaggle.com/competitions/severstal-steel-defect-detection/data). Для решения была использована модель YOLOv8, как одна из самых быстро обучаемых моделей для семантической сегментации. Кроме того, данная модель позволяет проводить комфортное использование для потокового видео "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -26,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Загрузка данных данных и первичный анализ"
+    "## Загрузка данных и первичный анализ"
    ]
   },
   {
@@ -168,7 +176,7 @@
     }
    ],
    "source": [
-    "# чтение файла\n",
+    "# чтение файла данных\n",
     "df = pd.read_csv(r'data\\train.csv')\n",
     "df"
    ]
@@ -785,22 +793,22 @@
    "source": [
     "output_folder = 'data/labels'\n",
     "\n",
-    "# Проходим по каждой строке в датасете\n",
+    "# проходим по каждой строке в датасете\n",
     "for index, row in df_yolo_2.iterrows():\n",
     "    file_name = row['file_name']\n",
     "    annotations = row['annotations']\n",
     "    class_labels = row['class_labels']\n",
     "\n",
-    "    # Создаем путь для сохранения файла аннотации\n",
+    "    # создаем путь для сохранения файла аннотации\n",
     "    annotation_path = os.path.join(output_folder, os.path.splitext(file_name)[0] + '.txt')\n",
     "\n",
     "    with open(annotation_path, 'w') as annotation_file:\n",
-    "        # Проходим по каждой аннотации и классу в текущей строке\n",
+    "        # проходим по каждой аннотации и классу в текущей строке\n",
     "        for i in range(len(annotations)):\n",
     "            annotation = annotations[i]\n",
     "            class_label = class_labels[i]\n",
     "\n",
-    "            # Записываем класс и координаты аннотации в файл\n",
+    "            # записываем класс и координаты аннотации в файл\n",
     "            annotation_line = f\"{class_label} {' '.join(map(str, annotation))}\\n\"\n",
     "            annotation_file.write(annotation_line)"
    ]
@@ -818,13 +826,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Путь к папке с изображениями\n",
+    "# путь к папке с изображениями\n",
     "images_folder = 'data/train_images'\n",
     "\n",
-    "# Путь к папке с аннотациями\n",
+    "# путь к папке с аннотациями\n",
     "annotations_folder = 'data/labels'\n",
     "\n",
-    "# Получаем список файлов в папке с изображениями\n",
+    "# получаем список файлов в папке с изображениями\n",
     "image_files = os.listdir(images_folder)[:10]  # Выбираем первые 10 изображений"
    ]
   },
@@ -935,32 +943,32 @@
     }
    ],
    "source": [
-    "# Проходим по каждому изображению\n",
+    "# проходим по каждому изображению\n",
     "for image_file in image_files:\n",
-    "    # Читаем изображение\n",
+    "    # читаем изображение\n",
     "    image_path = os.path.join(images_folder, image_file)\n",
     "    image = cv2.imread(image_path)\n",
     "\n",
-    "    # Получаем соответствующий файл аннотации\n",
+    "    # получаем соответствующий файл аннотации\n",
     "    annotation_file = os.path.join(annotations_folder, os.path.splitext(image_file)[0] + '.txt')\n",
     "\n",
-    "    # Если файл аннотации существует, обрабатываем его\n",
+    "    # если файл аннотации существует, обрабатываем его\n",
     "    if os.path.exists(annotation_file):\n",
     "        with open(annotation_file, 'r') as annotation_file:\n",
-    "            # Читаем аннотации из файла\n",
+    "            # читаем аннотации из файла\n",
     "            annotations = annotation_file.readlines()\n",
     "\n",
-    "            # Проходим по каждой аннотации и рисуем её на изображении\n",
+    "            # проходим по каждой аннотации и рисуем её на изображении\n",
     "            for annotation in annotations:\n",
     "                parts = annotation.split()\n",
     "                class_label = int(parts[0])\n",
     "                points = list(map(float, parts[1:]))\n",
     "                points = [(int(points[i] * image.shape[1]), int(points[i + 1] * image.shape[0])) for i in range(0, len(points), 2)]\n",
     "\n",
-    "                # Рисуем маску на изображении с контуром нужного цвета\n",
+    "                # рисуем маску на изображении с контуром нужного цвета\n",
     "                cv2.polylines(image, [np.array(points)], isClosed=True, color=(0, 0, 255), thickness=2)\n",
     "\n",
-    "    # Отображаем изображение с маской\n",
+    "    # отображаем изображение с маской\n",
     "    plt.imshow(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
     "    plt.title(f\"Image: {image_file}\")\n",
     "    plt.show()"
@@ -970,7 +978,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Создание тренеровочного и валидационного датасетов"
+    "## Создание тренировочного и валидационного датасетов"
    ]
   },
   {
@@ -1547,7 +1555,7 @@
     }
    ],
    "source": [
-    "# посмотрим результаты обучения модели на валидационной моделе\n",
+    "# посмотрим результаты обучения модели на валидационных данных\n",
     "metrics = model.val()"
    ]
   },
@@ -1604,14 +1612,15 @@
     }
    ],
    "source": [
+    "# сделаем прогноз по 10 случайным тестовым данным\n",
     "test_files = os.listdir(r'data/test_images')\n",
     "random_files = random.sample(test_files, 10)\n",
     "\n",
-    "# Проход по выбранным файлам\n",
+    "# проходим по выбранным файлам\n",
     "for file_name in random_files:\n",
     "    file_path = os.path.join(r'data/test_images', file_name)\n",
     "    \n",
-    "    # Вызов метода predict для каждого изображения\n",
+    "    # вызываем метод predict для каждого изображения\n",
     "    model.predict(file_path, save=True)"
    ]
   },
@@ -1722,15 +1731,16 @@
     }
    ],
    "source": [
+    "# выводим тестовое изображение и результат предсказания\n",
     "for test_file in random_files:\n",
     "    test_image_path = os.path.join(r'data\\test_images', test_file)\n",
     "    test_image = Image.open(test_image_path)\n",
     "\n",
-    "    # Находим соответствующее предсказанное изображение\n",
+    "    # находим соответствующее предсказанное изображение\n",
     "    predict_image_path = os.path.join(r'runs\\segment\\predict', test_file)\n",
     "    predict_image = Image.open(predict_image_path)\n",
     "\n",
-    "    # Создаем сетку 1x2 для вывода изображений попарно\n",
+    "    # создаем сетку 1x2 для вывода изображений попарно\n",
     "    fig, axes = plt.subplots(1, 2, figsize=(20, 10))\n",
     "\n",
     "    # Выводим тестовое изображение\n",
